--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 bin/obj/*
 .cache/
 compile_commands.json
+
+# Added by cargo
+
+/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
