--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
-path = "_src/lib.rs"
+path = "_src/rslib.rs"
 crate-type = ["staticlib"]
 test = false
 doctest = false
@@ -15,3 +15,4 @@ panic = "abort"
 opt-level = "s"
 
 [dependencies]
+paste = "1.0.15"
